added simple auth checking for login
